<resources>
    <string name="app_name">Emma-Tel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unexpected_api_error">unexpected_api_error</string>
    <string name="internet_error">problem on internet</string>
    <string name="update">Update</string>
    <string name="local">en</string>
    <string name="Home">Home</string>
    <string name="Mobiles">Mobiles</string>
    <string name="Accessories">Accessories</string>
    <string name="Offers">Offers</string>
    <string name="Branches">Branches</string>
    <string name="Notifications">Notifications</string>
    <string name="Pages">Pages</string>
    <string name="Translate"> Arabic</string>
    <string name="signup_signin">sign in</string>
    <string name="Contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="phone">+963</string>
    <string name="phone_number">Phone</string>
    <string name="create_account"><u>Create Account</u></string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="phoneInvalidMessage">phone is incorrect</string>
    <string name="confirmPasswordEmpty">please enter password confirm</string>
    <string name="passwordEmpty">please enter password </string>
    <string name="confirmNewPasswordError">The passwords do not match</string>
    <string name="phoneEmpty">please enter phone</string>
    <string name="code_error">Code Error</string>
    <string name="text_last_step">Regesteration Completed</string>
    <string name="LogOut">LogOut</string>
    <string name="login_failed">phone or password is wrong</string>
    <string name="facebook_app_id">521711795025654</string>
    <string name="fb_login_protocol_scheme">fb521711795025654</string>

    <string name="user_exsist">User exsist</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="edit_completed">Edit Completed</string>
    <string name="login">Login</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit">Edit</string>
    <string name="profile">Profile</string>
    <string name="welcome">Welcome</string>
    <string name="deails">Details</string>
    <string name="signup_desc">Enter phone number</string>
    <string name="signin">SignIn</string>
    <string name="address">العنوان :</string>
    <string name="phonemap">الهاتف :</string>
    <string name="fixed_phone">الأرضي :</string>
    <string name="whatsapp">واتس اب :</string>
    <string name="about_us_content">تقدم شركة ايما تيل خدمة الضمان لجميع منتجاتها المختلفة وفيما يلي وصف للخدمات المقدمة للأجهزة الخلوية \\r\\nتحمل منتجات سامسونغ ضمانا كاملا للمدة المحددة</string>
    <string name="submit">Submit</string>
    <string name="description">Description</string>
    <string name="message_sended">Message Sended</string>
    <string name="descEmpty">please fill your message</string>
    <string name="price">Price :</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="select_company">Select Company</string>
    <string name="browse">Browse</string>
    <string name="all">all</string>
    <string name="select_cat">Select Category</string>
    <string name="compare">compare with</string>
    <string name="Events">Events</string>
    <string name="Tablets">Tablets</string>
    <string name="mobile_status">Mobile Status</string>
    <string name="Mobile_status_in_syrian_network">Mobile Status in Syrian Network</string>
    <string name="Tips">Tips</string>
    <string name="NoThing">Nothing</string>
    <string name="select_mobile">Select Mobile</string>
    <string name="no_tips">Sorry ,  There are no tips for this device</string>
    <string name="sp">S.P</string>
    <string name="sin_up">Sign In</string>
    <string name="verfiy">Verify</string>
    <string name="finish">Finish</string>
</resources>
