<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.RegisterActivity"
    android:background="@color/colorAccent"

    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:gravity="center">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:text="@string/profile"
            android:textSize="14pt"
            android:textColor="@color/ms_white"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="140dp"
        android:background="@drawable/border_background_signup"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp">
                    <EditText

                        android:id="@+id/text_name"
                        android:background="@drawable/border_textview"
                        android:paddingStart="30dp"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        android:hint="@string/name"
                        android:textDirection="locale"
                        android:textSize="8pt"
                        />
                    <TextView
                        android:id="@+id/text_name_error"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/errorColor"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="40dp"
                        />
                </LinearLayout>


                <Button
                    android:id="@+id/button_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/update"
                    android:textColor="@color/ms_white"
                    android:textSize="8pt"
                    android:background="@drawable/border_raduis"
                    />



            </LinearLayout>

        </ScrollView>
    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>


