<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RegisterFragment"
    android:background="@drawable/background"
    >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_desc"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:textSize="8pt"
                   android:gravity="center"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="20dp">
                        <EditText

                            android:id="@+id/phone"
                            android:background="@drawable/border_textview"
                            android:paddingStart="30dp"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="20dp"
                            android:hint="@string/phone_number"
                            android:inputType="number"
                            android:textSize="8pt"
                         />
                        <TextView
                            android:id="@+id/phone_error"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/errorColor"
                            android:layout_marginTop="5dp"
                            android:layout_marginStart="40dp"
                            />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp">
                        <EditText
                            android:id="@+id/password"
                            android:background="@drawable/border_textview"
                            android:paddingStart="30dp"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="20dp"
                            android:hint="@string/password"
                            android:textSize="8pt"
                            android:inputType="textPassword"
                       />
                    <TextView
                        android:id="@+id/password_error"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/errorColor"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="40dp"

                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp">
                        <EditText
                            android:background="@drawable/border_textview"
                            android:paddingStart="30dp"
                            android:id="@+id/confirm_password"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="20dp"
                            android:hint="@string/confirm_password"
                            android:textSize="8pt"
                            android:inputType="textPassword"
                         />
                    <TextView
                        android:id="@+id/confirm_password_error"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/errorColor"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="40dp"

                        />
                </LinearLayout>

            </LinearLayout>

        </ScrollView>
</FrameLayout>