<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   >
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:src="@drawable/emma_tel"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                >
                <View
                    android:layout_width="40dp"
                    android:layout_height="11dp"
                    android:layout_marginEnd="1dp"
                    android:background="@color/colorPrimary">

                </View>
                <View
                    android:layout_width="7dp"
                    android:layout_height="11dp"
                    android:layout_marginEnd="1dp"
                    android:background="@color/colorPrimary4">
                </View>
                <View
                    android:layout_width="5dp"
                    android:layout_height="11dp"
                    android:layout_marginEnd="1dp"
                    android:background="@color/colorPrimary3">
                </View>
                <View
                    android:layout_width="5dp"
                    android:layout_height="11dp"
                    android:layout_marginEnd="1dp"
                    android:background="@color/colorPrimary2">
                </View>
                <View
                    android:layout_width="1dp"
                    android:layout_height="11dp"
                    android:layout_marginEnd="1dp"
                    android:background="@color/colorPrimary1">
                </View>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Accessories"
                    android:paddingStart="10dp"
                    android:textSize="16dp"
                    android:textColor="@color/colorAccent"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:weightSum="3"
                android:layout_margin="5dp"
                >
                <LinearLayout
                    android:background="@drawable/filter_reduis"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="2"
                    android:weightSum="3"
                    android:orientation="horizontal">
                    <Button
                        android:background="@drawable/border_raduis"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:textSize="6pt"
                        android:text="@string/browse"
                        android:id="@+id/filter"
                        android:textColor="@color/white"/>
                    <TextView
                        android:id="@+id/text_type"
                        android:layout_gravity="center"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textDirection="rtl"
                        android:text="@string/all"
                        android:textSize="8pt"
                        android:gravity="center"
                        android:textColor="@color/ms_white"/>

                </LinearLayout>
            </LinearLayout>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_accessory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                />
        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>
</android.support.constraint.ConstraintLayout>